fix(iteration): fix truncation and progress bar height

--- a/src/app/components/iterations-panel/iterations-panel.component.less
+++ b/src/app/components/iterations-panel/iterations-panel.component.less
@@ -85,17 +85,17 @@
     &-parent {
       float: right;
       padding-top: 3px;
-      padding-left: 12px;
-      &.left-truncate {
+      .left-truncate {
+        padding-left: 12px;
         color: @color-pf-white;
         background-color: transparent;
         &::before {
           color: @color-pf-white;
           line-height: 1.3;
         }
-      }
-      span {
-        font-size: 12px;
+        span {
+          font-size: 12px;
+        }
       }
     }
   }
@@ -127,5 +127,8 @@
       color: @color-pf-blue;
       font-size: 13px;
     }
+  }
+  .progress {
+    height: 12px;
   }
 }
